--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ textarea { font-size: 1.5rem; }
 button { font-size: 1.25rem; }
 
 h1, h2, p, textarea, button {
-  font-family: helvetica, tahoma, serif;
+  font-family: helvetica, tahoma, sans-serif;
   text-align: center;
   margin: 0 auto;
   padding: .25rem;
